@@ -1,3 +1,4 @@
+* BUGFIX: Fixed creating HmacHasher failure with unimplemented hash algorithm.
 * BUGFIX: Unable to create KSI_DataHash from digest if algorithm is not implemented.
 * IMPROVEMENT: Simplified integration test configuration (see integrationtest.conf.sample)
 * BUGFIX: Fixed KSIEP over TCP failing.
